@@ -146,6 +146,8 @@ BUG FIXES
 
     o	identify.hclust masked its `x' argument and so failed.
 
+    o	System rint was never being used in fround.c.
+
 
 
 		CHANGES IN R VERSION 1.5.0
